second lesson about project of module

--- a/javascript-fundamentals/part-2/final-project/package.json
+++ b/javascript-fundamentals/part-2/final-project/package.json
@@ -1,7 +1,11 @@
 {
+  "type": "module",
   "dependencies": {
     "chalk": "4",
     "chalk-table": "1",
     "draftlog": "^1.0.13"
+  },
+  "scripts": {
+    "start": "nodemon --experimental-json-modules src/index.js"
   }
 }
