--- a/javascript-fundamentals/part-2/final-project/package.json
+++ b/javascript-fundamentals/part-2/final-project/package.json
@@ -7,5 +7,11 @@
   },
   "scripts": {
     "start": "nodemon --experimental-json-modules src/index.js"
+  },
+  "devDependencies": {
+    "chai": "4",
+    "mocha": "8",
+    "nyc": "15",
+    "sinon": "9"
   }
 }
