--- a/javascript-regular-expression/project01/package.json
+++ b/javascript-regular-expression/project01/package.json
@@ -8,5 +8,8 @@
     "start": "nodemon src/index.js",
     "test": "mocha tests/**/*.spec.js",
     "test:cov": "nyc mocha tests/**/*.spec.js"
+  },
+  "dependencies": {
+    "pdf-parse": "^1.1.1"
   }
 }
